--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dependency-injector>=4.48.3",
     "easyocr>=1.7.2",
+    "fpdf>=1.7.2",
     "loguru>=0.7.3",
     "opencv-python-headless>=4.13.0.92",
     "pdfplumber>=0.11.9",
@@ -23,8 +24,19 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "pytest>=9.0.2",
-    "pytest-mock>=3.15.1",
-    "requests-mock>=1.12.1",
-]
+dev = ["pytest>=9.0.2", "pytest-mock>=3.15.1", "requests-mock>=1.12.1"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+fixable = ["ALL"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
