--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dependency-injector>=4.48.3",
     "easyocr>=1.7.2",
+    "faster-whisper>=1.2.1",
     "fpdf>=1.7.2",
     "loguru>=0.7.3",
     "opencv-python-headless>=4.13.0.92",
