--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,11 @@ dependencies = [
 dev = ["pytest>=9.0.2", "pytest-mock>=3.15.1", "requests-mock>=1.12.1"]
 
 [tool.ruff]
-line-length = 88
-target-version = "py311"
+line-length = 90
+target-version = "py313"
 
 [tool.ruff.lint]
-select = ["E", "F", "I"]
+select = ["E", "W", "F", "I", "UP", "B", "SIM"]
 ignore = []
 fixable = ["ALL"]
 
